# school-shit

./: README.md  databaze
Semestralka - rezervacia multikina/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  film_cas.txt  func.cpp  func.h  main.cpp  seats.txt
pc1t/: burka.cpp  imaginarne.cpp
pc1t/CV03/FunExt/: FunExt.cpp  FunExt.sln  FunExt.vcxproj  FunExt.vcxproj.filters  ReadMe.txt  stdafx.cpp
pc1t/Prog03/: Cyklus.pptx  LichaCisla.pptx  Podminka.pptx  Sekvence.pptx
pc1t/Prog03/Soucet/: CMakeLists.txt  Soucet.cpp  Soucet.h
pc1t/prestupnyrok/: CMakeLists.txt  Output-Debug.txt
pc1t/prestupnyrok/prestupnyrok/: CMakeLists.txt  prestupnyrok.cpp  prestupnyrok.h
pc2t/cvicenie2/: DatabaseOperation.java
