# CMakeList.txt : CMake project for Soucet, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Soucet")

# Add source to this project's executable.
add_executable (Soucet "Soucet.cpp" "Soucet.h")

# TODO: Add tests and install targets if needed.
